# anti_adv

./: .gitignore  01-adv-gradient-evolution.ipynb  README.md  adv.ipynb  requirements.txt
experiments/: README.md
experiments/exp_name/: README.MD
experiments/fgsm_mnist/: README.MD
experiments/fgsm_mnist/notebooks/: 00-FGSM-Module.ipynb  01-FGSM.ipynb
experiments/goodfellow_gan/: README.MD
experiments/goodfellow_gan/notebooks/: 01_goodfellow_gan_architecture.ipynb
notebooks/: 01-adv-gradient-evolution.ipynb  02-adv-gradient-assert-not-copy.ipynb  03-adv-gradient-evolution-hack-coupled-weights.ipynb  adv.ipynb
src/adversarial/: README.md  pyproject.toml  setup.py
src/adversarial/adversarial/: attacks.py  networks.py
src/adversarial/adversarial/metrics/: metrics.py
src/adversarial/adversarial/plotting/: plotting.py
