[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "matplotlib>=3.4.1",
    "numpy>=1.20.2",
    "pandas>=1.2.4",
    "Pillow>=8.2.0",
    "torch>=1.8.1",
    "torchaudio>=0.8.1",
    "torchvision>=0.9.1",
    "tornado>=6.1",
    "tqdm>=4.60.0",
]
build-backend = "setuptools.build_meta"